--- a/scss/components/_keypress.scss
+++ b/scss/components/_keypress.scss
@@ -51,5 +51,5 @@
 
 .logbox {
   margin: rem(20) 0 rem(20) rem(20);
-  min-width: rem(342);
+  width: rem(342);
 }
